k8s/docker-cats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-cats-deployment-baby
  labels:
    app: docker-cats-baby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-cats-baby
  template:
    metadata:
      labels:
        app: docker-cats-baby
    spec:
      containers:
      - name: baby
        image: unfor19/docker-cats
        ports:
        - name: probe-port
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 15
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: probe-port
          failureThreshold: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: "256Mi"
          limits:
            cpu: 200m
            memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-cats-deployment-green
  labels:
    app: docker-cats-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-cats-green
  template:
    metadata:
      labels:
        app: docker-cats-green
    spec:
      containers:
      - name: green
        image: unfor19/docker-cats
        ports:
        - name: probe-port
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 15
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: probe-port
          failureThreshold: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: "256Mi"
          limits:
            cpu: 200m
            memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-cats-deployment-dark
  labels:
    app: docker-cats-dark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-cats-dark
  template:
    metadata:
      labels:
        app: docker-cats-dark
    spec:
      containers:
      - name: dark
        image: unfor19/docker-cats
        ports:
        - name: probe-port
          containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: probe-port
          initialDelaySeconds: 15
          periodSeconds: 20
        startupProbe:
          tcpSocket:
            port: probe-port
          failureThreshold: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: "256Mi"
          limits:
            cpu: 200m
            memory: "512Mi"
--- ### Service
apiVersion: v1
kind: Service
metadata:
  name: docker-cats-service-baby
spec:
  selector:
    app: docker-cats-baby
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: docker-cats-service-green
spec:
  selector:
    app: docker-cats-green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: docker-cats-service-dark
spec:
  selector:
    app: docker-cats-dark
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
--- ### HPA
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
  name: docker-cats-hpa-baby
spec:
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: docker-cats-deployment-baby
  minReplicas: 1
  maxReplicas: 2
  metrics:
  - type: Resource
    resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 50
  - type: Resource
    resource:
      name: memory
      target:
        type: AverageValue
        averageValue: 300Mi
